# mcp-polygon

./: .dockerignore  .env  .gitignore  DOCKER_README.md  Dockerfile  HELM_TROUBLESHOOTING.md  Makefile  README.md  VERSIONING.md  docker-compose.yml  env.example  k8s-deployment.yaml  k8s-secret-example.yaml  pyproject.toml  server.py
.github/workflows/: docker-build.yml
scripts/: docker-setup.ps1  docker-setup.sh  entrypoint.sh  health_check.py
