[project]
name = "mcpvideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.4",
    "colorama>=0.4.6",
    "mcp[cli]>=1.6.0",
    "smolagents[litellm,mcp]>=1.13.0",
    "polygon-api-client>=1.14.2",
    "googlefinance>=0.7",
    "oauth2client>=4.1.3",
    "pandas>=2.1.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
